Requires
~~~~~~~~
- CMF 1.6.3
- Zope 2.9.7 (will not work anymore with older version)
- CPSI18n >= 1.0.0
New features
~~~~~~~~~~~~
-
Bug fixes
~~~~~~~~~
- Fixed #1569: Catalog: the ZCTitle index is blank.
- Fixed #1667: Content portlet : title search does not work.
- Fixed #1790: Support the newer Zope 2.9.x versions (2.9.5 and upper).
- Fixed #1835: folder_contents / content_lib_display_contents is limited to
  100 objects.
New internal features
~~~~~~~~~~~~~~~~~~~~~
- update import step dependency to work with CMF 1.6.3