@@ -13,6 +13,8 @@ Bug fixes
 - Fixed #1790: Support the newer Zope 2.9.x versions (2.9.5 and upper).
 - Fixed #1835: folder_contents / content_lib_display_contents is limited to
   100 objects.
+- Fixed #1530: "Members doesn't have a 'last_login_time' or 'last_login'
+  property anymore".
 New internal features
 ~~~~~~~~~~~~~~~~~~~~~
 - update import step dependency to work with CMF 1.6.3
